# pi-control

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build_frontend.py  build_frontent.py  docker-compose.prod.yml  docker-compose.yml  example.env  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: dockerimage.yml  publish.yml
docker/: Dockerfile
docker/dev/: Dockerfile
docker/prod/: Dockerfile
docker/shared/: calibre-installer.sh  wakeonlan_server.py
node_mcu/: config.example.json  init.lua  server.lua  utils.lua
node_mcu/py/: boot.py  button.py  config.json  config.py  hello.py  led_control.py  main.py  pin_status.py  requests.py  sempahore_api.py  server.py  temperature.py  urlconfig.py
pi_control/: manage.py  pyproject.toml
pi_control/ff_ebook_frontend/: apps.py  forms.py  tasks.py  views.py
pi_control/ff_ebook_frontend/templates/ff_ebook_frontend/: build_ebook.html
pi_control/home/: views.py
pi_control/home/js/: app.jsx  app.tsx  loading.jsx  loading.tsx  network.jsx  network.tsx  package-lock.json  package.json  pc_status.jsx  pc_status.tsx  server_stats.jsx  server_stats.tsx  temperature.jsx  temperature.tsx  tsconfig.json  webpack.config.js  widget.jsx  widget.tsx
pi_control/home/static/css/: style.css
pi_control/home/static/js/: 265.app.js  297.app.js  643.app.js  869.app.js  app.js  app.js.LICENSE.txt
pi_control/home/templates/home/: home.html
pi_control/network/: admin.py  measure.py  models.py  serializers.py  tasks.py  urls.py  views.py
pi_control/network/migrations/: 0001_initial.py  0002_auto_20180623_1537.py
pi_control/pc_status/: admin.py  apps.py  models.py  pc_status.py  tasks.py  urls.py  views.py
pi_control/pc_status/migrations/: 0001_initial.py
pi_control/pi_control/: admin.py  apps.py  authentication.py  celery.py  settings.py  urls.py  wsgi.py
pi_control/pi_control/static/css/: signin.css
pi_control/pi_control/static/webpush/: webpush.js
pi_control/pi_control/templates/: webpush_button.html
pi_control/pi_control/templates/pi_control/: base.html
pi_control/pi_control/templates/registration/: login.html
pi_control/pi_control/templatetags/: pi_tags.py
pi_control/scrabbler_frontend/: apps.py  forms.py  lazy_dict.py  scrabbler_client.py  views.py
pi_control/scrabbler_frontend/dict/: brno_ulice.dic  brno_ulice_nodia.dic  ulice_brno.dic
pi_control/server_stats/: apps.py  helpers.py  urls.py  views.py
pi_control/temperature/: admin.py  apps.py  constants.py  measure.py  models.py  serializers.py  tasks.py  urls.py  views.py
pi_control/temperature/fixtures/: devices.json
pi_control/temperature/js/: package-lock.json  package.json  temperature.jsx  webpack.config.js
pi_control/temperature/migrations/: 0001_initial.py  0001_squashed_0007_auto_20181125_2259.py  0002_auto_20180513_1412.py  0002_auto_20181202_1651.py  0002_measurementdevice_api.py  0003_auto_20181125_2007.py  0003_measurementdevice_active.py  0004_auto_20181208_1523.py  0004_measurementdevice_room.py  0005_auto_20181125_2057.py  0005_auto_20181208_1542.py  0006_auto_20181125_2231.py  0006_auto_20181208_1634.py  0007_auto_20181125_2259.py  0007_auto_20190620_2137.py
(+5 files in other folders)
