[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_mcu
  | node_modules
)/
'''

[tool.poetry]
name = "pi-control"
version = "0.1.0"
description = "Simple Django app to control my Raspberry Pi and some home devices."
authors = ["Michal Hozza <mhozza@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
amqp = ">=2.6.0"
asgiref = ">=3.2.10"
billiard = ">=3.6.3"
celery = "^4.4.6"
certifi = ">=2020.6.20"
chardet = ">=3.0.4"
defusedxml = ">=0.6.0"
Django = "^3.1"
django-celery-beat = ">=2.0.0"
django-celery-results = ">=1.2.1"
django-classy-tags = ">=1.0.0"
django-crispy-forms = ">=1.9.1"
django-debug-toolbar = ">=2.2"
django-dotenv = ">=1.4.2"
django-sekizai = ">=2.0.0"
djangorestframework = ">=3.11.0"
idna = ">=2.9"
kombu = ">=4.6.11"
oauthlib = ">=3.1.0"
psutil = ">=5.7.0"
psycopg2 = ">=2.8.5"
PyJWT = ">=1.7.1"
python3-openid = ">=3.1.0"
python-slugify = ">=4.0.0"
pytz = ">=2020.1"
requests = ">=2.24.0"
requests-oauthlib = ">=1.3.0"
six = ">=1.15.0"
social-auth-app-django = ">=4.0.0"
social-auth-core = ">=3.3.3"
urllib3 = ">=1.25.9"
vine = ">=1.3.0"
wakeonlan = ">=1.1.6"
whitenoise = ">=5.1.0"
ff-ebook = ">=0.3.0"
channels = ">=2.4.0"
scrabbler = "^0.2.0"

[tool.poetry.dev-dependencies]
watchdog = {extras = ["watchmedo"], version = ">=0.10.3"}
black = ">=19.10b0"
pre-commit = ">=2.5.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
