[tool.black]
line-length = 100
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_mcu
  | node_modules
)/
'''

[tool.poetry]
name = "pi-control"
version = "1.2.0"
description = "Simple Django app to control my Raspberry Pi and some home devices."
authors = ["Michal Hozza <mhozza@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
amqp = ">=5.2.0"
asgiref = ">=3.7.2"
billiard = ">=4.2.0"
celery = "^5.3"
certifi = ">=2023.11.17"
chardet = ">=5.2.0"
defusedxml = ">=0.7.1"
Django = "^4.2.0"
django-celery-beat = ">=2.5.0"
django-celery-results = ">=2.5.1"
django-classy-tags = ">=4.1.0"
django-crispy-forms = ">=2.1"
django-debug-toolbar = ">=4.2"
django-dotenv = ">=1.4.2"
django-sekizai = ">=4.1.0"
djangorestframework = ">=3.14.0"
idna = ">=3.6"
kombu = ">=5.3.4"
oauthlib = ">=3.2.2"
psutil = ">=5.9.6"
psycopg2 = ">=2.9.9"
PyJWT = ">=2.8.0"
python3-openid = ">=3.2.0"
python-slugify = ">=8.0.1"
pytz = ">=2023.3"
requests = ">=2.31.0"
requests-oauthlib = ">=1.3.1"
six = ">=1.16.0"
social-auth-app-django = ">=5.4.0"
social-auth-core = ">=4.5.1"
urllib3 = ">=2.1.0"
vine = ">=5.1.0"
wakeonlan = ">=3.1.0"
whitenoise = ">=6.6.0"
ff-ebook = ">=0.4.1"
channels = ">=4.0.0"
cachetools = "^4.2.4"

[tool.poetry.dev-dependencies]
watchdog = {extras = ["watchmedo"], version = ">=3.0.0"}
black = ">=23.11"
pre-commit = ">=3.6.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry_core>=1.0.1"]
build-backend = "poetry.core.masonry.api"
